force-app/main/default/objects/Service_Work_Assigned__e/Service_Work_Assigned__e.object-meta.xml
<CustomObject>
    <label>Service Work Assigned</label>
    <pluralLabel>Service Work Assigned</pluralLabel>
</CustomObject>