force-app/main/default/objects/Service_Work_Assigned__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>40</length>
    <type>Text</type>
</CustomField>