force-app/main/default/objects/Service_Work_Assigned__e/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <label>Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>