force-app/main/default/objects/Service_Work_Assigned__e/fields/Work_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Number__c</fullName>
    <label>Work Item Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>